--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -52,11 +52,58 @@
   </div>
 
 
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Password</label>
+    <div class="col-md-8">
+
+      <input class="form-control"
+        type="password"
+        placeholder="Contraseña"
+        formControlName="password1">
+    </div>
+  </div>
+
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Repetir password</label>
+    <div class="col-md-8">
+
+      <input class="form-control"
+        type="password"
+        placeholder="Repetir contraseña"
+        formControlName="password2">
+
+        <div *ngIf="forma.get('password2').errors">
+          <div class="error"
+            *ngIf="forma.get('password2').errors['noiguales']">
+              La contraseña no coincide
+          </div>
+        </div>
+    </div>
+  </div>
+
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Pasatiempos</label>
+
+    <div class="col-md-8" formArrayName="pasatiempos">
+
+      <input *ngFor="let pasatiempos of forma.controls['pasatiempos'].controls; index
+        as i"
+        [formControlName]="i"
+        type="text"
+        class="form-control">
+
+    </div>
+
+    <button type="button" class="btn btn-primary" (click)="agregarPasatiempo()">Nuevo</button>
+  </div>
+
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
-      <button type="submit" class="btn btn-outline-primary">
+      <button type="submit" class="btn btn-outline-primary" id="saveButton">
         Guardar
       </button>
     </div>
@@ -65,3 +112,8 @@
   {{ forma.valid }}
 
 </form>
+
+<pre>
+    {{ usuario | json}}
+
+</pre>
