--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -53,6 +53,18 @@
 
 
   <div class="form-group row">
+      <label class="col-2 col-form-label">Username</label>
+      <div class="col-md-8">
+
+        <input class="form-control"
+          type="text"
+          placeholder="Usuario"
+          formControlName="username">
+      </div>
+  </div>
+
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">Password</label>
     <div class="col-md-8">
 
@@ -111,9 +123,15 @@
 
   {{ forma.valid }}
 
+  <br>
+
+  {{ forma.status }}
+
 </form>
 
+
+<br>
 <pre>
-    {{ usuario | json}}
+    {{ forma.value | json}}
 
 </pre>
